language/move-lang/tests/move_check/naming/standalone_module_ident.exp
warning[W09001]: unused alias
  ┌─ tests/move_check/naming/standalone_module_ident.move:6:14
  │
6 │     use 0x2::X;
  │              ^ Unused 'use' of alias 'X'. Consider removing it

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/standalone_module_ident.move:8:17
  │
8 │         let x = X;
  │                 ^ Unbound constant 'X'

error[E03006]: unexpected name in this position
  ┌─ tests/move_check/naming/standalone_module_ident.move:9:17
  │
9 │         let x = 0x2::X;
  │                 ^^^^^^
  │                 │
  │                 Unexpected module identifier. A module identifier is not a valid expression
  │                 Expected a module name

error[E03006]: unexpected name in this position
   ┌─ tests/move_check/naming/standalone_module_ident.move:10:17
   │
10 │         let y = 0x2::Y;
   │                 ^^^^^^
   │                 │
   │                 Unexpected module identifier. A module identifier is not a valid expression
   │                 Expected a module name

